--- a/package.json
+++ b/package.json
@@ -29,5 +29,14 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@babel/core": "7.19.6",
+    "@babel/generator": "7.19.6",
+    "@babel/compat-data": "7.19.4",
+    "@babel/helper-compilation-targets": "7.19.3",
+    "@babel/helper-create-class-features-plugin": "7.19.0",
+    "@babel/helper-module-transforms": "7.19.6",
+    "babel-loader": "8.2.5"
   }
 }
